# RichSort

./: LICENSE  README.md  pyproject.toml
richsort/: algorithms.py  sort.py  sort_rich.py  sort_textual.py  test_cases.py
