[project]
name = "richsort"
version = "0.0.0"
description = ""
authors = [
    {name = "viniciusccosta",email = "viniciusccosta95@gmail.com"}
]
readme = "README.md"
requires-python = "~3.13"
dependencies = [
    "rich (>=14.0.0,<15.0.0)",
    "textual (>=4.0.0,<5.0.0)"
]

[project.scripts]
richsort = "richsort.sort:main"
richsort-textual = "richsort.sort_textual:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
